# GameHacks

./: .gitignore  CMakeLists.txt  Makefile  README.md
RE/Assault Cube/: AC.rcnet  ac_client.CT  assault_cube.rcnet
RE/PwnAdventure3/: PwnAdventure3 (32-bit, PCD3D_SM5).CT
RE/Tomb Raider/: TombRaider.CEA
achacks/: CMakeLists.txt  cheats.cpp  cheats.h  constants.h  dllmain.cpp  get_base_address_x86.asm  offsets.h  pch.h  playerent.h
achacks/cheats/: ammo.cpp  ammo.h  chat.cpp  chat.h  esp.cpp  esp.h  fly.cpp  fly.h  health.cpp  health.h  health_hook.asm  health_hook_x86.asm  movement.cpp  movement.h  noclip.cpp  noclip.h  radar.cpp  radar.h  recoil.cpp  recoil.h  triggerbot.cpp  triggerbot.h
achacks/cheats/states/: aimbot.cpp  aimbot.h  triggerbot.cpp  triggerbot.h
achacks/logging/: chat.cpp  chat.h
achacks/reclass/: playerent.h
libgamehacks/: CMakeLists.txt  constants.h  pch.h
libgamehacks/cheat/: cheat.h  cheatlist.cpp
libgamehacks/maths/: geometry.h  vector.h
libgamehacks/mem/: mem.cpp  mem.h
libgamehacks/native/: native.h
libgamehacks/state/: state.h  statemachine.cpp
libgamehacks/utils/: get_base_address_x64.asm  get_base_address_x86.asm  utils.cpp  utils.h
libgamehackutils/: CMakeLists.txt  cheatloop.h  constants.h  framework.h  logger.cpp  logger.h  mem.cpp  mem.h  native.h  pch.h  syscalls.cpp  winapi.cpp
libgamehackutils/anti_re/: anti_re.h
libgamehackutils/cheat/: cheatlist.h
libgamehackutils/logging/: logger.cpp
libgamehackutils/maths/: geometry.h  vector.h
libgamehackutils/mem/: mem.cpp  mem.h
libgamehackutils/native/: native.h  syscalls.cpp  winapi.cpp
libgamehackutils/state/: cheatloop.cpp  state.h  statemachine.cpp  statemachine.h
libgamehackutils/utils/: utils.h
pwnadventure3/: CMakeLists.txt  cheats.cpp  dllmain.cpp  framework.h  offsets.h  pch.h
pwnadventure3/cheats/: packet_capture.cpp  packet_capture.h
